# swagger.yaml
@@ -557,7 +557,7 @@ paths:
     get:
       summary: Cria uma nova candidatura à vaga
       tags:
-        - "Candidatura"
+        - "Candidaturas"
       description: Cria uma nova candidatura à vaga correspondente ao ID fornecido na query string, desde que a au pair ainda não tenha se candidatado à mesma vaga.
       parameters:
         - name: vagaID
@@ -580,6 +580,51 @@ paths:
           description: Vaga não encontrada
         500:
           description: Erro interno do servidor
+
+  /candidaturas:
+    get:
+      summary: Retorna todas as candidaturas
+      tags:
+        - "Candidaturas"
+      description: "Retorna todas as candidaturas do usuário logado"
+      parameters:
+        - name: x-access-token
+          in: header
+          description: Token de autenticação
+          required: true
+          type: string
+      produces:
+        - "application/json"
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: "Candidaturas recuperadas com sucesso"
+        401:
+          $ref: "#/responses/UnauthorizedError"
+  /aupair/candidaturas:
+    get:
+      summary: Retorna todas as candidaturas da Aupair
+      tags:
+        - "Candidaturas"
+      description: "Retorna todas as candidaturas da AuPair logada"
+      parameters:
+        - name: x-access-token
+          in: header
+          description: Token de autenticação
+          required: true
+          type: string
+      produces:
+        - "application/json"
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: "Candidaturas recuperadas com sucesso"
+        401:
+          $ref: "#/responses/UnauthorizedError"
+
+
 definitions:
   Vaga:
     type: object
